# mlops_2parte

./: .gitlab-ci.yml
labA/: LabA_Deriva_Datos_Titanic.md
labA/reports/: cond01_nostrat_60-20-20_seed42_report_VAL.html  cond02_nostrat_60-20-20_seed123_report_VAL.html  cond04_nostrat_90-5-5_seed123_report_VAL.html  cond05_nostrat_98-1-1_seed42_report_VAL.html  cond06_nostrat_98-1-1_seed123_report_TEST.html  cond07_strat_60-20-20_seed42_report_VAL.html  cond08_strat_60-20-20_seed123_report_TEST.html  cond08_strat_60-20-20_seed123_report_VAL.html  (+2 more)
tema6/: requirements.txt  titanic_drift_analysis.py
tema7/labA_t7/: .gitignore  README.md  deploy_flows.py  f01_monolith.py  f02_decoupled.py  pyproject.toml  requirements.txt  wandb_init.py
tema7/labA_t7/config/: f01_monolith_config.json  f02_decoupled_config.json  wandb_init.json
tema7/labA_t7/docs/: diseno_workflows.md
tema7/labB_t7/: .dockerignore  .gitignore  README.md  deploy_flows.py  docker-compose.yml  f01_process_data.py  f02_build_training_image.py  f04_deploy_serverless.py  pyproject.toml  requirements.txt  wandb_init.py
tema7/labB_t7/config/: docker.json  runpod.json  training.json  wandb.json  wandb_init.json
tema7/labB_t7/docs/: diseno_labB.md
tema7/labB_t7/predict/: Dockerfile  download_model.py  handler.py  requirements.txt
tema7/labB_t7/train/: Dockerfile  requirements.txt  train.py
tema7/labB_t7/utils/: config.py  titanic.py
tema7/labB_t7/utils/runpod/: update_endpoint.py  update_template.py
tema8/: .gitignore  .gitlab-ci.yml  README.md  requirements.txt
tema8/docs/: diseno_pipeline.md
(+32 files in other folders)
