[project]
name = "labB-t7-titanic-runpod"
version = "0.1.0"
description = "Lab B tema 7: entrenamiento y despliegue en RunPod con Prefect y W&B"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "prefect>=3.6.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "scikit-learn>=1.6.1",
    "wandb>=0.25.1",
]
